Fix portrait size on mobile

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -127,6 +127,10 @@ img {
     max-width: 25%;
     margin: auto;
     margin-top: 4em;
+
+    @media #{$media-size-phone} {
+      max-width: 50%;
+    }
   }
 }
 
